# CppMentoringProgram

./: .gitignore  CMakeLists.txt  README.md  SingleThreadedCopyTool.cpp  StlCopyTool.cpp  TwoThreadedCopyTool.cpp  build.txt  build_commands.txt  conanfile.txt  doc.md  main.cpp  next_steps.txt
CopyTool/: CMakeLists.txt  SharedMemoryCopyTool.cpp  SingleThreadedCopyTool.cpp  StlCopyTool.cpp  TwoThreadedCopyTool.cpp
CopyTool/include/CopyTool/: ICopyTool.h
CopyTool/test/: CMakeLists.txt  CopyToolTest.cpp
MainApp/: CMakeLists.txt  ProgramOptions.cpp  ProgramOptions.h  main.cpp  result.txt
MainApp/include/MainApp/: ProgramOptions.h
MainApp/test/: CMakeLists.txt  ProgramOptionsTest.cpp
SharedMemoryCopyToolTest/: test.py
